--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <nav>
     <ul>
-        <li><a href="#home">Larry Chiem</a></li>
-        <li><a href="#news">News</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="https://larrychiem.wordpress.com/">Blog</a></li>
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
             <div class="dropdown-content">
@@ -21,6 +21,12 @@
         </li>
     </ul>
 </nav>
+    <div class="top">
+        <h1>LARRY CHIEM</h1>
+    </div>
+    <div class="about">
+        <h1>About</h1>
+    </div>
 
 </body>
 </html>
