--- a/index.html
+++ b/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="main.css" rel="stylesheet">
+    <title>Portfolio by Larry Chiem</title>
+    <link href="main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<nav>
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="https://larrychiem.wordpress.com/">Blog</a></li>
-        <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
-            <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-            </div>
+        <!--<li class="dropdown"><a href="javascript:void(0)" class="dropbtn">My Experience</a>-->
+        <li><a>Resume</a>
+            <ul>
+                <li><a>Work</a></li>
+                <li><a>School</a></li>
+                <li><a>Projects</a></li>
+            </ul>
+        </li>
+        <li><a>Hobbies</a>
+            <ul>
+                <li><a>Basketball</a></li>
+                <li><a>Lifting</a></li>
+                <li><a>Tennis</a></li>
+            </ul>
+        </li>
+        <li><a>Contact</a>
+            <ul>
+                <li><a>Map</a></li>
+                <li><a>Directions</a></li>
+                <li><a>Social Media</a></li>
+            </ul>
         </li>
     </ul>
-</nav>
     <div class="top">
         <h1>LARRY CHIEM</h1>
-    </div>
-    <div class="about">
-        <h1>About</h1>
     </div>
 
 </body>
